--- a/forGithub/index.html
+++ b/forGithub/index.html
@@ -85,7 +85,7 @@
             </div>
         </section>
 
-        <section class="qualities clearfix">
+<!--         <section class="qualities clearfix">
 
             <div class="quality-item-1">
                 <i class="fas fa-star"></i>
@@ -107,7 +107,7 @@
                 <p class="text-1">Free Delivery</p>
             </div>
 
-        </section>
+        </section> -->
 
 
     </main>
