added fontawesome link
added font awesome link to the head section of page and changing necessary font awesome names in html

--- a/forGithub/index.html
+++ b/forGithub/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="bootstrap.min.css">
     <link rel="stylesheet" href="fa/css/all.css">
+    <script src="https://use.fontawesome.com/5f36d7295d.js"></script>
     <title>Document</title>
 </head>
 <body>
@@ -26,7 +27,7 @@
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-full"></i>
                 </div>
                 <p class="text-5">Scroll Down to learn more</p>
                 <div class="order-links">
@@ -89,22 +90,22 @@
         <section class="qualities">
 
             <div class="quality item-1">
-                <i class="fas fa-star"></i>
+                <i class="fas fa-automobile"></i>
                 <p class="text-1">Shipping</p>
                 <p class="text-2">Ghana + Nigeria + Burkina Faso</p>
             </div>
             <div class="quality item-2">
-                <i class="fas fa-star"></i>
+                <i class="fas fa-address-book"></i>
                 <p class="text-1">Organic And Natural Products</p>
                 <p class="text-2">100% Safe</p>
             </div>
             <div class="quality item-3">
-                <i class="fas fa-star"></i>
+                <i class="fas fa-money"></i>
                 <p class="text-1">Huge Savings</p>
                 <p class="text-2">Best Prices</p>
             </div>
             <div class="quality item-4">
-                <i class="fas fa-star"></i>
+                <i class="fas fa-recycle"></i>
                 <p class="text-1">Free Delivery</p>
             </div>
 
@@ -245,39 +246,39 @@
             <div class="product-group">
                 <div class="product-group-item">
                     <p class="title">Whitening Set</p>
-                    <i class="fas fa-star"></i><p class="text">Shower gel - 500ml or Soap - 300ml</p><br>
-                    <i class="fas fa-star"></i><p class="text">Scrub - 250ml</p><br>
-                    <i class="fas fa-star"></i><p class="text">Body lotion - 250ml</p><br>
-                    <i class="fas fa-star"></i><p class="text">Body Oil - 35ml</p><br>
-                    <i class="fas fa-star"></i><p class="text">Face Cleanser - 35ml</p><br>
-                    <i class="fas fa-star"></i><p class="text">Face Cream - 30ml</p><br>
-                    <i class="fas fa-star"></i><p class="text">Face Soap - 50g</p>
+                    <i class="fas fa-check"></i><p class="text">Shower gel - 500ml or Soap - 300ml</p><br>
+                    <i class="fas fa-check"></i><p class="text">Scrub - 250ml</p><br>
+                    <i class="fas fa-check"></i><p class="text">Body lotion - 250ml</p><br>
+                    <i class="fas fa-check"></i><p class="text">Body Oil - 35ml</p><br>
+                    <i class="fas fa-check"></i><p class="text">Face Cleanser - 35ml</p><br>
+                    <i class="fas fa-check"></i><p class="text">Face Cream - 30ml</p><br>
+                    <i class="fas fa-check"></i><p class="text">Face Soap - 50g</p>
 
                     <a href="#"><p class="link-text">Order Whitening Set - Gh&#8373;200 | &#8358;(equivalent in naira)</p></a>
                 </div>
 
                 <div class="product-group-item">
                     <p class="title">Halfcaste Set</p>
-                    <i class="fas fa-star"></i><p class="text">Shower gel - 500ml or Soap - 300ml</p><br>
-                    <i class="fas fa-star"></i><p class="text">Scrub - 250ml</p><br>
-                    <i class="fas fa-star"></i><p class="text">Body lotion - 250ml</p><br>
-                    <i class="fas fa-star"></i><p class="text">Body Oil - 35ml</p><br>
-                    <i class="fas fa-star"></i><p class="text">Face Cleanser - 35ml</p><br>
-                    <i class="fas fa-star"></i><p class="text">Face Cream - 30ml</p><br>
-                    <i class="fas fa-star"></i><p class="text">Face Soap - 50g</p>
+                    <i class="fas fa-check"></i><p class="text">Shower gel - 500ml or Soap - 300ml</p><br>
+                    <i class="fas fa-check"></i><p class="text">Scrub - 250ml</p><br>
+                    <i class="fas fa-check"></i><p class="text">Body lotion - 250ml</p><br>
+                    <i class="fas fa-check"></i><p class="text">Body Oil - 35ml</p><br>
+                    <i class="fas fa-check"></i><p class="text">Face Cleanser - 35ml</p><br>
+                    <i class="fas fa-check"></i><p class="text">Face Cream - 30ml</p><br>
+                    <i class="fas fa-check"></i><p class="text">Face Soap - 50g</p>
 
                     <a href="#"><p class="link-text">Order Halfcaste Set - Gh&#8373;250 | &#8358;(equivalent in naira)</p></a>
                 </div>
 
                 <div class="product-group-item">
                     <p class="title">Caramel set</p>
-                    <i class="fas fa-star"></i><p class="text">Shower gel - 500ml or Soap - 300ml</p><br>
-                    <i class="fas fa-star"></i><p class="text">Scrub - 250ml</p><br>
-                    <i class="fas fa-star"></i><p class="text">Body lotion - 250ml</p><br>
-                    <i class="fas fa-star"></i><p class="text">Body Oil - 35ml</p><br>
-                    <i class="fas fa-star"></i><p class="text">Face Cleanser - 35ml</p><br>
-                    <i class="fas fa-star"></i><p class="text">Face Cream - 30ml</p><br>
-                    <i class="fas fa-star"></i><p class="text">Face Soap - 50g</p>
+                    <i class="fas fa-check"></i><p class="text">Shower gel - 500ml or Soap - 300ml</p><br>
+                    <i class="fas fa-check"></i><p class="text">Scrub - 250ml</p><br>
+                    <i class="fas fa-check"></i><p class="text">Body lotion - 250ml</p><br>
+                    <i class="fas fa-check"></i><p class="text">Body Oil - 35ml</p><br>
+                    <i class="fas fa-check"></i><p class="text">Face Cleanser - 35ml</p><br>
+                    <i class="fas fa-check"></i><p class="text">Face Cream - 30ml</p><br>
+                    <i class="fas fa-check"></i><p class="text">Face Soap - 50g</p>
 
                     <a href="#"><p class="link-text">Order Caramel Set - Gh&#8373;200 | &#8358;(equivalent in naira)</p></a>
                 </div>
