--- a/forGithub/index.html
+++ b/forGithub/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://use.fontawesome.com/5f36d7295d.js"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="bootstrap.min.css">
     <link rel="stylesheet" href="fa/css/all.css">
@@ -518,5 +519,6 @@
     <footer>
         <p>Copyright c 2021 | Runa Organics | Natural Hair & Skin Products</p>
     </footer>
+    <script src="https://use.fontawesome.com/5f36d7295d.js"></script>
 </body>
 </html>
